--- a/index.html
+++ b/index.html
@@ -39,9 +39,15 @@
         </nav>
         <ul class="nav-contacts">
           <li class="item">
-            <a class="nav-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <svg class="icon-envelope">
+              <use href="./images/symbol-defs.svg#icon-envelope"></use> 
+            </svg>
+            <a class="nav-contact"  href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li class="item">
+            <svg class="icon-phone">
+              <use href="./images/symbol-defs.svg#icon-smartphone"></use> 
+            </svg>
             <a class="nav-contact" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
