--- a/index.html
+++ b/index.html
@@ -39,16 +39,15 @@
         </nav>
         <ul class="nav-contacts">
           <li class="item">
-            <svg class="icon-envelope">
+              <a class="nav-contact"  href="mailto:info@devstudio.com"> <svg class="icon-envelope nav-icon">
               <use href="./images/symbol-defs.svg#icon-envelope"></use> 
-            </svg>
-            <a class="nav-contact"  href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </svg> info@devstudio.com</a>
           </li>
           <li class="item">
-            <svg class="icon-phone">
+            
+            <a class="nav-contact" href="tel:+380961111111"> <svg class="icon-phone nav-icon">
               <use href="./images/symbol-defs.svg#icon-smartphone"></use> 
-            </svg>
-            <a class="nav-contact" href="tel:+380961111111">+38 096 111 11 11</a>
+            </svg>+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
