--- a/index.html
+++ b/index.html
@@ -66,27 +66,36 @@
 
       <section class="section">
         <div class="container">
+          
           <h2 class="visually-hidden">Особенности</h2>
           <ul class="features-list">
             <li class="features">
+              <div class="feature-picture">
+                <svg class="picture-icon antenna">
+                  <use href="../images/symbol-defs.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="features-header">Внимание к деталям</h3>
               <p class="features-content">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
             <li class="features">
+              <div class="feature-picture"></div>
               <h3 class="features-header">Пунктуальность</h3>
               <p class="features-content">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
             <li class="features">
+              <div class="feature-picture"></div>
               <h3 class="features-header">Планирование</h3>
               <p class="features-content">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
             <li class="features">
+              <div class="feature-picture"></div>
               <h3 class="features-header">Современные технологии</h3>
               <p class="features-content">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
