--- a/index.html
+++ b/index.html
@@ -298,6 +298,47 @@
           </ul>
         </div>
       </section>
+
+      <!--Клиенты-->
+
+      <section class="section clients">
+        <div class="container">
+          <h2 class="header-clients">Постоянные клиенты</h2>
+          <div class="clients-links">
+            <a href="" class="client-link">
+              <svg class="client-icon">
+                <use href="../images/symbol-defs.svg#icon-company1"></use>
+              </svg>
+            </a>
+            <a href="" class="client-link">
+              <svg class="client-icon">
+                <use href="../images/symbol-defs.svg#icon-company2"></use>
+              </svg>
+            </a>
+            <a href="" class="client-link">
+              <svg class="client-icon">
+                <use href="../images/symbol-defs.svg#icon-company3"></use>
+              </svg>
+            </a>
+            <a href="" class="client-link">
+              <svg class="client-icon">
+                <use href="../images/symbol-defs.svg#icon-company4"></use>
+              </svg>
+            </a>
+            <a href="" class="client-link">
+              <svg class="client-icon">
+                <use href="../images/symbol-defs.svg#icon-company5"></use>
+              </svg>
+            </a>
+            <a href="" class="client-link">
+              <svg class="client-icon">
+                <use href="../images/symbol-defs.svg#icon-company6"></use>
+              </svg>
+            </a>
+          </div>
+        </div>
+      </section>
+
     </main>
     <!--подвал-->
     <footer class="footer">
