--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <li class="features">
               <div class="feature-picture">
                 <svg class="picture-icon antenna">
-                  <use href="../images/symbol-defs.svg#icon-antenna"></use>
+                  <use href="./images/symbol-defs.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="features-header">Внимание к деталям</h3>
@@ -83,7 +83,7 @@
             <li class="features">
               <div class="feature-picture">
                 <svg class="picture-icon clock">
-                  <use href="../images/symbol-defs.svg#icon-clock"></use>
+                  <use href="./images/symbol-defs.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="features-header">Пунктуальность</h3>
@@ -94,7 +94,7 @@
             <li class="features">
               <div class="feature-picture">
                 <svg class="picture-icon diagram">
-                  <use href="../images/symbol-defs.svg#icon-diagram"></use>
+                  <use href="./images/symbol-defs.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="features-header">Планирование</h3>
@@ -105,7 +105,7 @@
             <li class="features">
               <div class="feature-picture">
                 <svg class="picture-icon astronaut">
-                  <use href="../images/symbol-defs.svg#icon-astronaut"></use>
+                  <use href="./images/symbol-defs.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="features-header">Современные технологии</h3>
@@ -155,28 +155,28 @@
                 <div class="social-links">
                   <a class="link-instagram link-icon" href="">
                     <svg class="social-icons instagram" >
-                      <use href="../images/symbol-defs.svg#icon-instagram"> 
+                      <use href="./images/symbol-defs.svg#icon-instagram"> 
                       </use>
                     </svg>
                   </a>
 
                   <a class="link-twitter link-icon" href="">
                     <svg class="social-icons twitter" >
-                      <use href="../images/symbol-defs.svg#icon-twitter"> 
+                      <use href="./images/symbol-defs.svg#icon-twitter"> 
                       </use>
                     </svg>
                   </a>
 
                   <a class="link-facebook link-icon" href="">
                     <svg class="social-icons facebook" >
-                      <use href="../images/symbol-defs.svg#icon-facebook"> 
+                      <use href="./images/symbol-defs.svg#icon-facebook"> 
                       </use>
                     </svg>
                   </a>
 
                   <a class="link-linkedin link-icon" href="">
                     <svg class="social-icons linkedin" >
-                      <use href="../images/symbol-defs.svg#icon-linkedin"> 
+                      <use href="./images/symbol-defs.svg#icon-linkedin"> 
                       </use>
                     </svg>
                   </a>
@@ -192,28 +192,28 @@
                 <div class="social-links">
                   <a class="link-instagram link-icon" href="">
                     <svg class="social-icons instagram" >
-                      <use href="../images/symbol-defs.svg#icon-instagram"> 
+                      <use href="./images/symbol-defs.svg#icon-instagram"> 
                       </use>
                     </svg>
                   </a>
 
                   <a class="link-twitter link-icon" href="">
                     <svg class="social-icons twitter" >
-                      <use href="../images/symbol-defs.svg#icon-twitter"> 
+                      <use href="./images/symbol-defs.svg#icon-twitter"> 
                       </use>
                     </svg>
                   </a>
 
                   <a class="link-facebook link-icon" href="">
                     <svg class="social-icons facebook" >
-                      <use href="../images/symbol-defs.svg#icon-facebook"> 
+                      <use href="./images/symbol-defs.svg#icon-facebook"> 
                       </use>
                     </svg>
                   </a>
 
                   <a class="link-linkedin link-icon" href="">
                     <svg class="social-icons linkedin" >
-                      <use href="../images/symbol-defs.svg#icon-linkedin"> 
+                      <use href="./images/symbol-defs.svg#icon-linkedin"> 
                       </use>
                     </svg>
                   </a>
@@ -229,28 +229,28 @@
                 <div class="social-links">
                   <a class="link-instagram link-icon" href="">
                     <svg class="social-icons instagram" >
-                      <use href="../images/symbol-defs.svg#icon-instagram"> 
+                      <use href="./images/symbol-defs.svg#icon-instagram"> 
                       </use>
                     </svg>
                   </a>
 
                   <a class="link-twitter link-icon" href="">
                     <svg class="social-icons twitter" >
-                      <use href="../images/symbol-defs.svg#icon-twitter"> 
+                      <use href="./images/symbol-defs.svg#icon-twitter"> 
                       </use>
                     </svg>
                   </a>
 
                   <a class="link-facebook link-icon" href="">
                     <svg class="social-icons facebook" >
-                      <use href="../images/symbol-defs.svg#icon-facebook"> 
+                      <use href="./images/symbol-defs.svg#icon-facebook"> 
                       </use>
                     </svg>
                   </a>
 
                   <a class="link-linkedin link-icon" href="">
                     <svg class="social-icons linkedin" >
-                      <use href="../images/symbol-defs.svg#icon-linkedin"> 
+                      <use href="./images/symbol-defs.svg#icon-linkedin"> 
                       </use>
                     </svg>
                   </a>
@@ -266,28 +266,28 @@
                 <div class="social-links">
                   <a class="link-instagram link-icon" href="">
                     <svg class="social-icons instagram" >
-                      <use href="../images/symbol-defs.svg#icon-instagram"> 
+                      <use href="./images/symbol-defs.svg#icon-instagram"> 
                       </use>
                     </svg>
                   </a>
 
                   <a class="link-twitter link-icon" href="">
                     <svg class="social-icons twitter" >
-                      <use href="../images/symbol-defs.svg#icon-twitter"> 
+                      <use href="./images/symbol-defs.svg#icon-twitter"> 
                       </use>
                     </svg>
                   </a>
 
                   <a class="link-facebook link-icon" href="">
                     <svg class="social-icons facebook" >
-                      <use href="../images/symbol-defs.svg#icon-facebook"> 
+                      <use href="./images/symbol-defs.svg#icon-facebook"> 
                       </use>
                     </svg>
                   </a>
 
                   <a class="link-linkedin link-icon" href="">
                     <svg class="social-icons linkedin" >
-                      <use href="../images/symbol-defs.svg#icon-linkedin"> 
+                      <use href="./images/symbol-defs.svg#icon-linkedin"> 
                       </use>
                     </svg>
                   </a>
@@ -307,32 +307,32 @@
           <div class="clients-links">
             <a href="" class="client-link">
               <svg class="client-icon">
-                <use href="../images/symbol-defs.svg#icon-company1"></use>
+                <use href="./images/symbol-defs.svg#icon-company1"></use>
               </svg>
             </a>
             <a href="" class="client-link">
               <svg class="client-icon">
-                <use href="../images/symbol-defs.svg#icon-company2"></use>
+                <use href="./images/symbol-defs.svg#icon-company2"></use>
               </svg>
             </a>
             <a href="" class="client-link">
               <svg class="client-icon">
-                <use href="../images/symbol-defs.svg#icon-company3"></use>
+                <use href="./images/symbol-defs.svg#icon-company3"></use>
               </svg>
             </a>
             <a href="" class="client-link">
               <svg class="client-icon">
-                <use href="../images/symbol-defs.svg#icon-company4"></use>
+                <use href="./images/symbol-defs.svg#icon-company4"></use>
               </svg>
             </a>
             <a href="" class="client-link">
               <svg class="client-icon">
-                <use href="../images/symbol-defs.svg#icon-company5"></use>
+                <use href="./images/symbol-defs.svg#icon-company5"></use>
               </svg>
             </a>
             <a href="" class="client-link">
               <svg class="client-icon">
-                <use href="../images/symbol-defs.svg#icon-company6"></use>
+                <use href="./images/symbol-defs.svg#icon-company6"></use>
               </svg>
             </a>
           </div>
