--- a/portfolio.html
+++ b/portfolio.html
@@ -184,21 +184,57 @@
     </main>
     <!--подвал-->
     <footer class="footer">
-      <div class="container">
-        <a class="logo-footer" href="index.html">Web<span class="logo-white">Studio</span></a>
-        <address class="footer-address-section">
-          <ul>
-            <li class="footer-address footer-item">г. Киев, пр-т Леси Украинки, 26</li>
+      <div class="container footer-box">
+        <div class="footer-contacts">
+          <a class="logo-footer" href="index.html">Web<span class="logo-white">Studio</span></a>
+          <address class="footer-address-section">
+            <ul>
+              <li class="footer-address">г. Киев, пр-т Леси Украинки, 26</li>
+              <li>
+                <a class="footer-item" href="mailto:info@example.com">info@example.com</a>
+              </li>
+              <li>
+                <a class="footer-item" href="tel:+380991111111">+38 099 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-social">
+          <h3 class="uppercase-header social-header">Присоединяйтесь</h3>
+          <ul class="social-links footer-links">
             <li>
-              <a class="footer-contacts footer-item" href="mailto:info@example.com"
-                >info@example.com</a
-              >
+              <a class="link-footer link-icon" href="">
+                <svg class="social-icons">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
+
             <li>
-              <a class="footer-contacts footer-item" href="tel:+380991111111">+38 099 111 11 11</a>
+              <a class="link-footer link-icon" href="">
+                <svg class="social-icons">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li>
+              <a class="link-footer link-icon" href="">
+                <svg class="social-icons">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li>
+              <a class="link-footer link-icon" href="">
+                <svg class="social-icons">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
