--- a/portfolio.html
+++ b/portfolio.html
@@ -38,10 +38,20 @@
         </nav>
         <ul class="nav-contacts">
           <li class="item">
-            <a class="nav-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="nav-contact" href="mailto:info@devstudio.com">
+              <svg class="nav-icon" width="16" height="12">
+                <use href="./images/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
+            >
           </li>
           <li class="item">
-            <a class="nav-contact" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="nav-contact" href="tel:+380961111111">
+              <svg class="nav-icon" width="10" height="16">
+                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
