--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <ul class="features-list">
             <li class="features">
               <div class="feature-picture">
-                <svg class="picture-icon" width="65" height="70">
+                <svg class="picture-icon" width="70" height="70">
                   <use href="./images/symbol-defs.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -86,7 +86,7 @@
             </li>
             <li class="features">
               <div class="feature-picture">
-                <svg class="picture-icon" width="67" height="70">
+                <svg class="picture-icon" width="70" height="70">
                   <use href="./images/symbol-defs.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -97,7 +97,7 @@
             </li>
             <li class="features">
               <div class="feature-picture">
-                <svg class="picture-icon" width="70" height="54">
+                <svg class="picture-icon" width="70" height="70">
                   <use href="./images/symbol-defs.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -108,7 +108,7 @@
             </li>
             <li class="features">
               <div class="feature-picture">
-                <svg class="picture-icon" width="55" height="61">
+                <svg class="picture-icon" width="70" height="70">
                   <use href="./images/symbol-defs.svg#icon-astronaut"></use>
                 </svg>
               </div>
@@ -159,31 +159,31 @@
                 <ul class="social-links">
                   <li>
                     <a class="link-icon" href="">
-                      <svg class="social-icons">
+                      <svg class="social-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
 
                   <li>
-                    <a class="link-twitter link-icon" href="">
-                      <svg class="social-icons twitter">
+                    <a class="link-icon" href="">
+                      <svg class="social-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
 
                   <li>
-                    <a class="link-facebook link-icon" href="">
-                      <svg class="social-icons facebook">
+                    <a class="link-icon" href="">
+                      <svg class="social-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
 
                   <li>
-                    <a class="link-linkedin link-icon" href="">
-                      <svg class="social-icons linkedin">
+                    <a class="link-icon" href="">
+                      <svg class="social-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -199,31 +199,31 @@
                 <ul class="social-links">
                   <li>
                     <a class="link-icon" href="">
-                      <svg class="social-icons">
+                      <svg class="social-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
 
                   <li>
-                    <a class="link-twitter link-icon" href="">
-                      <svg class="social-icons twitter">
+                    <a class="link-icon" href="">
+                      <svg class="social-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
 
                   <li>
-                    <a class="link-facebook link-icon" href="">
-                      <svg class="social-icons facebook">
+                    <a class="link-icon" href="">
+                      <svg class="social-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
 
                   <li>
-                    <a class="link-linkedin link-icon" href="">
-                      <svg class="social-icons linkedin">
+                    <a class="link-icon" href="">
+                      <svg class="social-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -239,31 +239,31 @@
                 <ul class="social-links">
                   <li>
                     <a class="link-icon" href="">
-                      <svg class="social-icons">
+                      <svg class="social-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
 
                   <li>
-                    <a class="link-twitter link-icon" href="">
-                      <svg class="social-icons twitter">
+                    <a class="link-icon" href="">
+                      <svg class="social-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
 
                   <li>
-                    <a class="link-facebook link-icon" href="">
-                      <svg class="social-icons facebook">
+                    <a class="link-icon" href="">
+                      <svg class="social-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
 
                   <li>
-                    <a class="link-linkedin link-icon" href="">
-                      <svg class="social-icons linkedin">
+                    <a class="link-icon" href="">
+                      <svg class="social-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -279,7 +279,7 @@
                 <ul class="social-links">
                   <li>
                     <a class="link-icon" href="">
-                      <svg class="social-icons">
+                      <svg class="social-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -287,7 +287,7 @@
 
                   <li>
                     <a class="link-icon" href="">
-                      <svg class="social-icons">
+                      <svg class="social-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
@@ -295,7 +295,7 @@
 
                   <li>
                     <a class="link-icon" href="">
-                      <svg class="social-icons">
+                      <svg class="social-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-facebook"></use>
                       </svg>
                     </a>
@@ -303,7 +303,7 @@
 
                   <li>
                     <a class="link-icon" href="">
-                      <svg class="social-icons">
+                      <svg class="social-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -389,7 +389,7 @@
           <ul class="social-links footer-links">
             <li>
               <a class="link-footer link-icon" href="">
-                <svg class="social-icons">
+                <svg class="social-icons" width="20" height="20">
                   <use href="./images/symbol-defs.svg#icon-instagram"></use>
                 </svg>
               </a>
@@ -397,7 +397,7 @@
 
             <li>
               <a class="link-footer link-icon" href="">
-                <svg class="social-icons">
+                <svg class="social-icons" width="20" height="20">
                   <use href="./images/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
@@ -405,7 +405,7 @@
 
             <li>
               <a class="link-footer link-icon" href="">
-                <svg class="social-icons">
+                <svg class="social-icons" width="20" height="20">
                   <use href="./images/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </a>
@@ -413,7 +413,7 @@
 
             <li>
               <a class="link-footer link-icon" href="">
-                <svg class="social-icons">
+                <svg class="social-icons" width="20" height="20">
                   <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                 </svg>
               </a>
