--- a/portfolio.html
+++ b/portfolio.html
@@ -214,7 +214,7 @@
           <ul class="social-links footer-links">
             <li>
               <a class="link-footer link-icon" href="">
-                <svg class="social-icons">
+                <svg class="social-icons" width="20" height="20">
                   <use href="./images/symbol-defs.svg#icon-instagram"></use>
                 </svg>
               </a>
@@ -222,7 +222,7 @@
 
             <li>
               <a class="link-footer link-icon" href="">
-                <svg class="social-icons">
+                <svg class="social-icons" width="20" height="20">
                   <use href="./images/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
@@ -230,7 +230,7 @@
 
             <li>
               <a class="link-footer link-icon" href="">
-                <svg class="social-icons">
+                <svg class="social-icons" width="20" height="20">
                   <use href="./images/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </a>
@@ -238,7 +238,7 @@
 
             <li>
               <a class="link-footer link-icon" href="">
-                <svg class="social-icons">
+                <svg class="social-icons" width="20" height="20">
                   <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                 </svg>
               </a>
