--- a/index.html
+++ b/index.html
@@ -323,42 +323,42 @@
           <ul class="clients-links">
             <li>
               <a href="" class="client-link">
-                <svg class="client-icon">
+                <svg class="client-icon" width="106" height="60">
                   <use href="./images/symbol-defs.svg#icon-company1"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href="" class="client-link">
-                <svg class="client-icon">
+                <svg class="client-icon" width="106" height="60">
                   <use href="./images/symbol-defs.svg#icon-company2"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href="" class="client-link">
-                <svg class="client-icon">
+                <svg class="client-icon" width="106" height="60">
                   <use href="./images/symbol-defs.svg#icon-company3"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href="" class="client-link">
-                <svg class="client-icon">
+                <svg class="client-icon" width="106" height="60">
                   <use href="./images/symbol-defs.svg#icon-company4"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href="" class="client-link">
-                <svg class="client-icon">
+                <svg class="client-icon" width="106" height="60">
                   <use href="./images/symbol-defs.svg#icon-company5"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href="" class="client-link">
-                <svg class="client-icon">
+                <svg class="client-icon" width="106" height="60">
                   <use href="./images/symbol-defs.svg#icon-company6"></use>
                 </svg>
               </a>
