--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <h3 class="team-name">Игорь Демьяненко</h3>
                 <p class="team-profession">Product designer</p>
                 <ul class="social-links">
-                  <li>
+                  <li class="soc-link-list">
                     <a class="link-icon" href="">
                       <svg class="social-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-instagram"></use>
@@ -165,7 +165,7 @@
                     </a>
                   </li>
 
-                  <li>
+                  <li class="soc-link-list">
                     <a class="link-icon" href="">
                       <svg class="social-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
@@ -173,7 +173,7 @@
                     </a>
                   </li>
 
-                  <li>
+                  <li class="soc-link-list">
                     <a class="link-icon" href="">
                       <svg class="social-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-facebook"></use>
@@ -181,7 +181,7 @@
                     </a>
                   </li>
 
-                  <li>
+                  <li class="soc-link-list">
                     <a class="link-icon" href="">
                       <svg class="social-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-linkedin"></use>
@@ -197,7 +197,7 @@
                 <h3 class="team-name">Ольга Репина</h3>
                 <p class="team-profession">Frontend Developer</p>
                 <ul class="social-links">
-                  <li>
+                  <li class="soc-link-list">
                     <a class="link-icon" href="">
                       <svg class="social-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-instagram"></use>
@@ -205,7 +205,7 @@
                     </a>
                   </li>
 
-                  <li>
+                  <li class="soc-link-list">
                     <a class="link-icon" href="">
                       <svg class="social-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
@@ -213,7 +213,7 @@
                     </a>
                   </li>
 
-                  <li>
+                  <li class="soc-link-list">
                     <a class="link-icon" href="">
                       <svg class="social-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-facebook"></use>
@@ -221,7 +221,7 @@
                     </a>
                   </li>
 
-                  <li>
+                  <li class="soc-link-list">
                     <a class="link-icon" href="">
                       <svg class="social-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-linkedin"></use>
@@ -237,7 +237,7 @@
                 <h3 class="team-name">Николай Тарасов</h3>
                 <p class="team-profession">Marketing</p>
                 <ul class="social-links">
-                  <li>
+                  <li class="soc-link-list">
                     <a class="link-icon" href="">
                       <svg class="social-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-instagram"></use>
@@ -245,7 +245,7 @@
                     </a>
                   </li>
 
-                  <li>
+                  <li class="soc-link-list">
                     <a class="link-icon" href="">
                       <svg class="social-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
@@ -253,7 +253,7 @@
                     </a>
                   </li>
 
-                  <li>
+                  <li class="soc-link-list">
                     <a class="link-icon" href="">
                       <svg class="social-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-facebook"></use>
@@ -261,7 +261,7 @@
                     </a>
                   </li>
 
-                  <li>
+                  <li class="soc-link-list">
                     <a class="link-icon" href="">
                       <svg class="social-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-linkedin"></use>
@@ -277,7 +277,7 @@
                 <h3 class="team-name">Михаил Ермаков</h3>
                 <p class="team-profession">UI Designer</p>
                 <ul class="social-links">
-                  <li>
+                  <li class="soc-link-list">
                     <a class="link-icon" href="">
                       <svg class="social-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-instagram"></use>
@@ -285,7 +285,7 @@
                     </a>
                   </li>
 
-                  <li>
+                  <li class="soc-link-list">
                     <a class="link-icon" href="">
                       <svg class="social-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
@@ -293,7 +293,7 @@
                     </a>
                   </li>
 
-                  <li>
+                  <li class="soc-link-list">
                     <a class="link-icon" href="">
                       <svg class="social-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-facebook"></use>
@@ -301,7 +301,7 @@
                     </a>
                   </li>
 
-                  <li>
+                  <li class="soc-link-list">
                     <a class="link-icon" href="">
                       <svg class="social-icons" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-linkedin"></use>
@@ -387,7 +387,7 @@
         <div class="footer-social">
           <h3 class="uppercase-header social-header">Присоединяйтесь</h3>
           <ul class="social-links footer-links">
-            <li>
+            <li class="soc-link-list">
               <a class="link-footer link-icon" href="">
                 <svg class="social-icons" width="20" height="20">
                   <use href="./images/symbol-defs.svg#icon-instagram"></use>
@@ -395,7 +395,7 @@
               </a>
             </li>
 
-            <li>
+            <li class="soc-link-list">
               <a class="link-footer link-icon" href="">
                 <svg class="social-icons" width="20" height="20">
                   <use href="./images/symbol-defs.svg#icon-twitter"></use>
@@ -403,7 +403,7 @@
               </a>
             </li>
 
-            <li>
+            <li class="soc-link-list">
               <a class="link-footer link-icon" href="">
                 <svg class="social-icons" width="20" height="20">
                   <use href="./images/symbol-defs.svg#icon-facebook"></use>
@@ -411,7 +411,7 @@
               </a>
             </li>
 
-            <li>
+            <li class="soc-link-list">
               <a class="link-footer link-icon" href="">
                 <svg class="social-icons" width="20" height="20">
                   <use href="./images/symbol-defs.svg#icon-linkedin"></use>
